// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature/query-bar/components/filter/FilterButton render should render FilterButton default state 1`] = `
<Flyout
  className="query-bar-filter-dropdown-flyout"
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnClickPredicate={[Function]}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  overlayIsVisible={false}
  portaledClasses={Array []}
  position="bottom-right"
  shouldDefaultFocus={true}
>
  <Button
    className="query-bar-button"
    isDisabled={true}
    onClick={[Function]}
    type="button"
  >
    <MenuToggle>
      <IconMetadataFilter
        className="button-icon"
      />
      <span
        className="button-label"
      >
        <FormattedMessage
          defaultMessage="Modify Filters"
          id="boxui.queryBar.filtersButtonText"
        />
      </span>
    </MenuToggle>
  </Button>
  <Overlay>
    <div />
  </Overlay>
</Flyout>
`;

exports[`feature/query-bar/components/filter/FilterButton render should render FilterButton with template passed in 1`] = `
<Flyout
  className="query-bar-filter-dropdown-flyout"
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnClickPredicate={[Function]}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  overlayIsVisible={false}
  portaledClasses={Array []}
  position="bottom-right"
  shouldDefaultFocus={true}
>
  <Button
    className="query-bar-button"
    isDisabled={false}
    onClick={[Function]}
    type="button"
  >
    <MenuToggle>
      <IconMetadataFilter
        className="button-icon"
      />
      <span
        className="button-label"
      >
        <FormattedMessage
          defaultMessage="Modify Filters"
          id="boxui.queryBar.filtersButtonText"
        />
      </span>
    </MenuToggle>
  </Button>
  <Overlay>
    <div />
  </Overlay>
</Flyout>
`;
